# mbed-client-for-azure

./: .mbedignore  CMakeLists.txt  README.md  azure-iot-sdk-c.lib  mbed_lib.json
copied/c-utility/: force_include.h
dependencies/: azure-umqtt-c.lib  c-utility.lib  parson.lib  umock-c.lib
mbed/adapters/: lock_rtx_mbed.cpp  socketio_mbed_os5.c  socketio_mbed_os5.cpp  tcpsocketconnection_mbed_os5.cpp  threadapi_rtx_mbed.cpp  tickcounter_mbed_os5.cpp
